Edited Font Awesome kit to correct link Added no select CSS Added media responsiveness Added filler text Added title and subtitle Fixed and adjusted we protect examples Overhauled the landing image auto-changer Made navbar stick to the top on scroll Added letter spacing to all text Added background colour Fixed and adjusted navbar and the buttons and logo within Adjusted colour of "a" attribute Made container for auto-changing images on the home page Changed the we protect animation from class "subtitle" to "we-protect-animation" Moved styling from HTML file to CSS file Commented out unwanted code (console.log for testing and not working code) Auto-resized padding of home image to fit navbar Adding 4th landing image

--- a/style.css
+++ b/style.css
@@ -1,101 +1,205 @@
 * {
     font-family: "Martian Mono";
+    letter-spacing: -0.1vw;
+}
+
+.no-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+/*Mobile mode*/
+@media only screen and (max-width: 500px) {
+    .desktop {
+        display: none!important;
+    }
+/*     a {
+        padding: 0;
+        word-spacing: -5px;
+    } */
+    /* .navbar-button p {
+        font-size: 1vw;
+        flex-basis: 120px;
+    } */
+}
+
+/*Desktop mode*/
+@media only screen and (min-width: 501px){
+    .mobile {
+        display: none!important;
+    }
+    a {
+        padding: 0.5% 0.5%;
+    }
+    .logo-header {
+        margin-right: 30px;
+    }
+}
+
+/*When the navbar becomes too big */
+@media (max-width: 760px) {
+    .logo-header {
+        margin: auto;
+        margin-bottom: 5px;
+    }
+    .navbar-buttons {
+        /* white-space: nowrap; */
+        width: fit-content;
+        justify-content: space-around;
+        margin-left: calc(50% - 250px);
+    }
 }
 
 body {
+    background-color: #eee0f4;
     margin: 0px;
 }
 
 nav {
-    overflow: hidden;
-    list-style-type: none;
-    position: sticky;
-    /* margin: 0; */
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    align-items: center;
     padding: 10px 10px;
     background-color: #09578d;
     text-decoration: solid;
-}
-
-li {
-    float: left;
-    display: block;
-    text-align: justify;
-    padding: 14px 4px;
-    text-decoration: none;
-}
-
-a {
-    color: #fff;
-    float: left;
-    display: block;
-    text-align: justify;
-    padding: 0.5% 1%;
-    text-decoration: none;
-    word-spacing: -3px;
-}
-
-a:hover {
-    background-color: rgb(255, 255, 255);
-    color: #09578d;
+    flex-wrap: wrap;
 }
 
 .logo-header {
     float: left;
     width: 200px;
     padding: 4px;
-    border-right: 8px solid #09578d;
+}
+
+.navbar-buttons {
+    white-space: nowrap;
+    padding: auto;
+    width: 100%;
+    flex: 1;
 }
 
 .navbar-button {
+    display: inline-block;
     text-align: center;
     font-size: min(1em, 70px);
+    margin-right: 0.8%;
 }
 
-.slides {
+a {
+    color: #eee0f4;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: justify;
+    text-decoration: none;
+    border-radius: 2px;
+}
+
+.instant-response {
+    color:cyan;
+}
+
+.instant-response:hover {
+    color: firebrick;
+}
+
+a:hover {
+    background-color: rgb(255, 255, 255);
+    color: #09578d;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.main-content {
+    padding-top: 81.85px;
+}
+
+.title, .subtitle, .we-protect-animation {
+    position: absolute;
+    color: white; /* Text color */
+}
+
+.title {
+    align-items: center;
+    top: 8vw;
+    left: 1vw;
+/*    transform: translate(-50%, 50%);  Center the text within the image */
+    background-color: rgb(10, 69, 233, 0.75); /* Optional background color for better readability */
+    padding: 1%; /* Add padding for better text visibility */
+    width: max-content;
+    max-width: 75vw;
+    font-size: 2.2vw;
+    font-weight: 900;
+    
 }
 
 .subtitle {
-    top: 80%;
+    align-items: center;
+    top: 17vw;
+    left: 1vw;
+/*     transform: translate(-100%, -100%); */
+    background-color: rgb(250, 6, 6); /* Optional background color for better readability */
+    padding: 1%; /* Add padding for better text visibility */
+    width: max-content;
+    max-width: 90vw;
+    font-size: 1.2vw;
+    font-weight: bold;
+}
+
+.slideshow-container {
+    position: relative;
+    width: 100%;
+    margin: 0 auto; /* Center the container horizontally */
+}
+
+.slides {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slides img {
+    width: 100%;
+    height: auto;
+}
+
+.we-protect-animation {
+    align-items: center;
+    top: 40vw;
     left: 50%;
+    transform: translate(-50%, -50%); /* Center the text within the image */
+    background-color: rgba(0, 0, 0); /* Optional background color for better readability */
+    padding: 1%; /* Add padding for better text visibility */
+    width: max-content;
+    font-size: calc(10px + 1.75vw);
 }
 
 .we-protect, .protection-examples {
-    position: absolute;
+    display: inline-block;
 }
-
-.main-container {
-    position: relative;
-    text-align: center;
-    color: white;
-}
-
-.title-background {
-    background-color:#fff ;
-    width: 200px;
-    height: 100px;
-    border: 1px solid rgb(255, 255, 255);
-    padding: 10px;
-    margin: 10px;
-  }
 
 .we-protect {
-    left: 0;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: min(6.5vw, 800px);
-    display: inline-block;
+    color:red;
 }
 
-.protection-examples {
-    left: 0;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: min(6vw, 700px);
-    margin: auto;
-    display: inline-block;
+#protection-examples::after {
+    content: '';
+    position: absolute;
+    bottom: 0.5vw;
+    right: 1vw;
+    width: calc(5.5px + 1.1vw);
+    height: 0.45vh;
+    background-color: rgb(6, 182, 50); /* Adjust the color as needed */
+    animation: flash 0.55s infinite; /* Adjust the animation duration as needed */
+}
+
+@keyframes flash {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
 }
